policies/best-practices/require-image-digest/require-image-digest.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mas-require-image-digest
  annotations:
    policies.kyverno.io/title: Require Images Use Digests
    policies.kyverno.io/category: MAS Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/description: >-
      Use of a SHA checksum when pulling an image is often preferable because tags
      are mutable and can be overwritten. This policy checks to ensure that all images
      use SHA checksums rather than tags.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: require-image-digest
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - "mas-*"
      validate:
        message: "Images must use checksums rather than tags."
        pattern:
          spec:
            containers:
              - image: "*@sha256:*"
