policies/best-practices/require-image-digest/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-image-digest
policies:
  - require-image-digest.yaml
resources:
  - resources.yaml
results:
  # Deployments
  - kind: Deployment
    policy: mas-require-image-digest
    resources:
      - baddeployment
    result: fail
    rule: require-image-digest
  - kind: Deployment
    policy: mas-require-image-digest
    resources:
      - gooddeployment
    result: pass
    rule: require-image-digest
  # CronJobs
  - kind: CronJob
    policy: mas-require-image-digest
    resources:
      - badcronjob
    result: fail
    rule: require-image-digest
  - kind: CronJob
    policy: mas-require-image-digest
    resources:
      - goodcronjob
    result: pass
    rule: require-image-digest
